fix: cards overlaping in mobile view

--- a/css/characters.css
+++ b/css/characters.css
@@ -3,7 +3,7 @@
 .characterSection{
     display: flex;
     justify-content: space-around;
-    flex-wrap: wrap;
+    flex-wrap: wrap;   
     
 }
 .characterSection img{
@@ -18,6 +18,7 @@
 }
 
 .characterSection .charCard{
+    margin: 10px;
     background-color: transparent;
     backdrop-filter: blur(20px);
     color: var(--wait);
@@ -26,4 +27,6 @@
 .characterSection .card-body{
     background-color: rgba(177, 70, 8, 0.4);
     height: 100%;
+    border-radius: 5px;
+    
 }
